# DocDown

./: .gitignore  DocDown.code-workspace  README.md  docdown.yaml  pr-body-6.1.md  pyproject.toml  pytest.ini
.github/: copilot-instructions.md
.github/workflows/: cd.yml  ci.yml
docdown/: __init__.py  __main__.py  cli.py  config.py  pipeline.py  workdir.py
docdown/stages/: chunk_validation.py  cleanup.py  convert.py  extract.py  final_validation.py  merge.py  run_summary.py  split.py  tables.py  toc.py
docdown/utils/: logging.py
docs/: docker-wsl-grobid-setup.md  pre-investigation.md  spec.md  technical-design.md
docs/notes/: 2026-03-20_05-05-50.md  2026-03-20_05-52-39.md  2026-04-07_20-53-00.md  2026-04-13_12-30-00.md  2026-04-13_12-45-00.md  2026-04-14_02-30-00.md  2026-04-14_06-35-00.md  2026-04-14_07-10-00.md  2026-04-14_14-40-00-node01-primary-runner-setup.md  2026-04-14_16-20-00-docdownops-runner-setup.md  2026-04-21_14-34-00.md  2026-04-30_09-31-00.md  20260326-122000.md
docs/plan/: 2026-04-14_14-40-00-node01-primary-runner-setup.md  fast-path-01.md  fast-path-02.md  non-python-alternatives.md  overview.md  task-1.1-project-structure.md  task-1.2-configuration.md  task-1.3-logging.md  task-1.4-workdir-management.md  task-10.0-ci-cd-prerequisites.md  task-10.0-didc-pipeline.md  task-5.3-table-merging.md  (+23 more)
tests/: test_chunk_validation.py  test_cleanup.py  test_cli.py  test_config.py  test_convert.py  test_extract.py  test_final_validation.py  test_logging.py  test_merge.py  test_run_summary.py  test_split.py  test_tables.py  test_toc.py  test_workdir.py
(+1 files in other folders)
