[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docdown"
version = "0.1.0"
description = "PDF-to-Markdown conversion pipeline for large documents"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "pdfminer.six>=20221105",
    "pymupdf>=1.23",
    "camelot-py[cv]>=0.11",
    "tabulate>=0.9",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
docdown = "docdown.cli:main"

[tool.setuptools.packages.find]
include = ["docdown*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that require external services such as Dockerized GROBID",
]
